--- a/Scms.Web/Scms.Web.csproj
+++ b/Scms.Web/Scms.Web.csproj
@@ -5,9 +5,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="NLog.Web.AspNetCore" Version="4.14.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Scms.BusinessModel\Scms.BusinessModel.csproj" />
     <ProjectReference Include="..\Scms.CoreService\Scms.CoreService.csproj" />
     <ProjectReference Include="..\Scms.ToolHelp\Scms.ToolHelp.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="Config\nlog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
